deploy/micro-services/front/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 443
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          upgrade_configs: 
            upgrade_type: websocket
            enabled: true
          stat_prefix: ingress_http
          use_remote_address: true
          # xff_num_trusted_hops: 0

          route_config:
            name: local_route
            virtual_hosts:
            - name: stripe
              domains:
              - "esm-stripe.aadi.my"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: esm-stripe
            - name: admin
              domains:
              - "esm-admin.aadi.my"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: esm-admin
            - name: gloader
              domains:
              - "esm-gloader.aadi.my"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: esm-game-loader
            - name: grpcproxy
              domains:
              - "esm-api.aadi.my"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: grpc-web-proxy
          http_filters:
          - name: envoy.router
            typed_config: {}

      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
              - certificate_chain: 
                  filename: /etc/envoy/certs/fullchain.pem
                private_key: 
                  filename: /etc/envoy/certs/privkey.pem
  clusters:
  - name: esm-stripe
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: esm-stripe
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: esm-stripe
                port_value: 4242
  - name: esm-admin
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: esm-admin
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: esm-admin
                port_value: 3030
  - name: esm-game-loader
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: esm-game-loader
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: esm-game-loader
                port_value: 3033
  - name: grpc-web-proxy
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: grpc-web-proxy
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: grpc-web-proxy
                port_value: 8080
